# computer-graphics-mass-spring-systems

./: .gitignore  CMakeLists.txt  README.html  README.md  README.tex.md  main.cpp
data/: eiffel.json  flag.json  horizontal-chain.json  net.json  shirt.json  single-spring-horizontal.json  skirt.json  trap.json
images/: dij-rij-closest-vector.ai  potential-energy.ai
include/: fast_mass_springs_precomputation_dense.h  fast_mass_springs_precomputation_sparse.h  fast_mass_springs_step_dense.h  fast_mass_springs_step_sparse.h  read_json.h  signed_incidence_matrix_dense.h  signed_incidence_matrix_sparse.h
markdown/: header.md
src/: fast_mass_springs_precomputation_dense.cpp  fast_mass_springs_precomputation_sparse.cpp  fast_mass_springs_step_dense.cpp  fast_mass_springs_step_sparse.cpp  signed_incidence_matrix_dense.cpp  signed_incidence_matrix_sparse.cpp
